# dubco

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/dubco_cli/: __init__.py  config.py  main.py
src/dubco_cli/api/: __init__.py  client.py  links.py  oauth.py
src/dubco_cli/commands/: __init__.py  add.py  auth.py  list.py  rm.py  stats.py  tui.py
src/dubco_cli/models/: __init__.py  auth.py  link.py
src/dubco_cli/tui/: __init__.py  app.py  state.py
src/dubco_cli/tui/screens/: __init__.py  detail.py  main.py
src/dubco_cli/tui/screens/modals/: __init__.py  delete.py  edit.py
src/dubco_cli/tui/styles/: app.tcss
src/dubco_cli/tui/widgets/: __init__.py  footer.py  links_table.py  sidebar.py
src/dubco_cli/utils/: __init__.py  csv.py  output.py  utm.py
tests/: __init__.py  conftest.py  test_add.py  test_list.py  test_rm.py
